--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,2 @@
-ASTRA_DB_ID=choreboarddb-2256d123-7e37-4a2f-8b36-5c3be48e27a5
-ASTRA_DB_REGION=us-east1
-ASTRA_DB_APPLICATION_TOKEN=AstraCS:...
-ASTRA_DB_NAMESPACE=choreboarddb
+ASTRA_DB_API_ENDPOINT=https://choreboarddb-2256d123-7e37-4a2f-8b36-5c3be48e27a5-us-east1.apps.astra.datastax.com
+ASTRA_DB_APPLICATION_TOKEN=AstraCS:... (your token)
