--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "embla-carousel-react": "latest",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
+    "mongodb": "^6.17.0",
     "next": "15.2.4",
     "next-themes": "latest",
     "react": "^19",
