--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cmdk": "latest",
     "date-fns": "latest",
     "embla-carousel-react": "latest",
+    "express": "^5.1.0",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
     "mongodb": "^6.17.0",
