--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "clsx": "^2.1.1",
     "cmdk": "latest",
     "date-fns": "latest",
+    "dotenv": "^17.2.0",
     "embla-carousel-react": "latest",
     "express": "^5.1.0",
     "input-otp": "latest",
