--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "latest",
+    "cors": "^2.8.5",
     "date-fns": "latest",
     "dotenv": "^17.2.0",
     "embla-carousel-react": "latest",
