--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-v0-project",
+  "name": "my-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@datastax/astra-db-ts": "^2.0.1",
+    "@aws-sdk/credential-providers": "latest",
     "@hookform/resolvers": "^3.9.1",
+    "@mongodb-js/zstd": "latest",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "latest",
     "@radix-ui/react-aspect-ratio": "latest",
@@ -38,18 +39,23 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
+    "@types/mongodb": "^4.0.6",
     "autoprefixer": "^10.4.20",
+    "axios": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "latest",
-    "cors": "^2.8.5",
+    "cors": "latest",
     "date-fns": "latest",
-    "dotenv": "^17.2.0",
+    "dotenv": "latest",
     "embla-carousel-react": "latest",
-    "express": "^5.1.0",
+    "express": "latest",
+    "gcp-metadata": "latest",
     "input-otp": "latest",
+    "kerberos": "latest",
     "lucide-react": "^0.454.0",
     "mongodb": "^6.17.0",
+    "mongodb-client-encryption": "latest",
     "next": "15.2.4",
     "next-themes": "latest",
     "react": "^19",
@@ -58,6 +64,8 @@
     "react-hook-form": "latest",
     "react-resizable-panels": "latest",
     "recharts": "latest",
+    "snappy": "latest",
+    "socks": "latest",
     "sonner": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -71,10 +79,5 @@
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
-  }
-}
-{
-  "dependencies": {
-    "mongodb": "^6.0.0"
   }
 }
