--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,14 @@
 {
   "hosting": {
-    "site": "choreboard-4246f",
-    "public": "out",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+    "public": ".next",
+    "rewrites": [
+      {
+        "source": "**",
+        "function": "nextjsFunc"
+      }
+    ]
+  },
+  "functions": {
+    "source": "functions"
   }
 }
