--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "my-project",
+  "name": "choreboard-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -39,23 +42,18 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
-    "@types/mongodb": "^4.0.6",
     "autoprefixer": "^10.4.20",
-    "axios": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "latest",
-    "cors": "latest",
     "date-fns": "latest",
-     "dotenv": "latest",
     "embla-carousel-react": "latest",
-    "express": "latest",
-    "firebase": "^12.0.0",
     "gcp-metadata": "latest",
     "input-otp": "latest",
+    "jsonwebtoken": "latest",
     "kerberos": "latest",
     "lucide-react": "^0.454.0",
-    "mongodb": "^6.17.0",
+    "mongodb": "latest",
     "mongodb-client-encryption": "latest",
     "next": "15.2.4",
     "next-themes": "latest",
