Fix expenses page client-side error - add missing date-fns import

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "latest",
-    "date-fns": "latest",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "latest",
     "gcp-metadata": "latest",
     "input-otp": "latest",
